--- a/.github/workflows/Integration.yml
+++ b/.github/workflows/Integration.yml
@@ -38,6 +38,7 @@ jobs:
           - 9091:9091
 
     steps:
+      - uses: actions/checkout@v2
       - name: Install sccache
         env:
           LINK: https://github.com/mozilla/sccache/releases/download
@@ -49,7 +50,6 @@ jobs:
           mv -f $SCCACHE_FILE/sccache $HOME/.local/bin/sccache
           chmod +x $HOME/.local/bin/sccache
           echo "$HOME/.local/bin" >> $GITHUB_PATH
-
       - name: Install dependencies
         run: ls -l -R /home/runner/work/SecretCalcContract; npm --prefix tests/ install
       - uses: ./.github/actions/install-rust
